Fix unreadable <code> when prefers-color-scheme: light

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -270,7 +270,7 @@ pre {
     }
   
     @media (prefers-color-scheme: light) {
-      color: #ccc;
+      color: #111;
     }
   
     [data-theme=dark] & {
